--- a/applications/app-service/build.gradle
+++ b/applications/app-service/build.gradle
@@ -1,12 +1,14 @@
 apply plugin: 'org.springframework.boot'
 
 dependencies {
+	implementation project(':reactive-web')
+	implementation project(':tree-model-handler')
 	implementation project(':iast-pattern-config')
     implementation project(':model')
     implementation project(':usecase')
     implementation 'org.springframework.boot:spring-boot-starter'
     runtimeOnly('org.springframework.boot:spring-boot-devtools')
-    testImplementation 'com.tngtech.archunit:archunit:1.3.0'
+    testImplementation 'com.tngtech.archunit:archunit:1.1.1'
     testImplementation 'com.fasterxml.jackson.core:jackson-databind'
 }
 
