--- a/applications/app-service/src/main/resources/application.yaml
+++ b/applications/app-service/src/main/resources/application.yaml
@@ -1,14 +1,28 @@
-##Spring Configuration
 server:
   port: 8080
 spring:
   application:
-    name: Service_IastPattern-POC
+    name: "Service_IastPattern-POC"
   devtools:
     add-properties: false
   h2:
     console:
       enabled: true
-      path: /h2
+      path: "/h2"
   profiles:
-    include:
+    include: null
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "health,prometheus"
+  endpoint:
+    health:
+      probes:
+        enabled: true
+cors:
+  allowed-origins: "http://localhost:4200,http://localhost:8080"
+
+iast-pattern:
+    config:
+      files: "${IAST-PATTERN_CONFIG_FILE:applications/app-service/src/main/resources/pattern-config/}"
