--- a/settings.gradle
+++ b/settings.gradle
@@ -16,3 +16,7 @@ project(':model').projectDir = file('./domain/model')
 project(':usecase').projectDir = file('./domain/usecase')
 include ':iast-pattern-config'
 project(':iast-pattern-config').projectDir = file('./infrastructure/driven-adapters/iast-pattern-config')
+include ':tree-model-handler'
+project(':tree-model-handler').projectDir = file('./infrastructure/helpers/tree-model-handler')
+include ':reactive-web'
+project(':reactive-web').projectDir = file('./infrastructure/entry-points/reactive-web')
