--- a/main.gradle
+++ b/main.gradle
@@ -1,8 +1,7 @@
 allprojects {
     repositories {
+        maven { url "https://artifactory.apps.bancolombia.com/maven-bancolombia" }
         mavenCentral()
-        maven { url "https://repo.spring.io/snapshot" }
-        maven { url "https://repo.spring.io/milestone" }
     }
 }
 
