--- a/infrastructure/entry-points/reactive-web/build.gradle
+++ b/infrastructure/entry-points/reactive-web/build.gradle
@@ -2,6 +2,8 @@ dependencies {
     implementation project(':usecase')
     implementation project(':model')
     implementation project(':iast-pattern-config')
+    implementation project(':logging-and-monitoring-service')
+    implementation 'co.com.bancolombia:logging-adapter:1.0.8'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'io.micrometer:micrometer-registry-prometheus'
